	- IFF format loading is now more permissive toward errors in the IFF
	  tag structure, fixing some broken modules that would load for 64-bit
	  Linux builds but not for Windows.
	- Fix sample name, restart position, note 0 loading, and pattern count
	  calculation for Images Music System modules.
	- Fix XM volume effects cxx/dxx accidentally having effects memory.
	- Fix Real Tracker RTM maximum pattern row count, various effects
	  translations, initial panning and sample panning, sample base volume,
	  non-delta coded samples, and instrument flags.
	- Correct default of sample default panning values to -1 (no default
	  panning) for most module formats.
	- Fix Galaxy Music System 4.0 sample default panning.
	Changes by Alice Rowan and ds-sloth:
	- Minor Impulse Tracker loader performance improvements.

4.6.3 (20250511):
	Changes by Alice Rowan:
	- Fix crashes when xmp_set_position is used to set a negative position.
	  Negative positions now correctly return -XMP_ERROR_INVALID.
	- Fix crashes when xmp_set_row is used to set a negative row.
	  Negative positions now correctly return -XMP_ERROR_INVALID.
	- Fix hangs when xmp_prev_position is used on the first position of
	  a sequence which is preceded by an S3M/IT skip marker.
	- Fix out-of-bounds reads when xmp_next_position is used at the end of
	  a 256 position module.
	- Fix hangs when seeking to an end-of-module marker caused by these
	  positions getting assigned a non-existent sequence.
	- Document xmp_set_position/xmp_next_position/xmp_prev_position
	  interactions with xmp_stop_module/xmp_restart_module.
	- Fix stack underflow in Pha Packer loader (CVE-2025-47256).
	- Slight performance improvements for the Oktalyzer and SFX loaders.
	- Fix broken conversion of ProRunner 2.0 pattern data.
	- xmp_set_tempo_factor no longer alters frame time calculation for
	  xmp_get_frame_info. Frame time is now updated to account for the
	  new time factor after calling xmp_scan_module.