@@ -1,0 +1,64 @@
+31 0 0 0 3506176 48 0 1024 -9 0 0 0
+62 0 1 0 3506176 48 0 1024 -9 3 0 0
+94 0 2 0 3506176 48 0 1024 -9 6 0 0
+125 0 3 0 3506176 48 0 1024 -9 9 0 0
+156 1 0 0 3506176 48 0 1024 -9 12 0 0
+188 1 1 0 3506176 48 0 1024 -9 15 0 0
+219 1 2 0 3506176 48 0 1024 -9 18 0 0
+250 1 3 0 3506176 48 0 1024 -9 21 0 0
+282 2 0 0 3506176 48 0 1024 -9 24 0 0
+313 2 1 0 3506176 48 0 1024 -9 27 0 0
+344 2 2 0 3506176 48 0 1024 -9 30 0 0
+376 2 3 0 3506176 48 0 1024 -9 1 0 0
+407 3 0 0 3506176 48 0 0 -9 4 0 0
+439 3 1 0 3506176 48 0 0 -9 7 0 0
+470 3 2 0 3506176 48 0 0 -9 10 0 0
+501 3 3 0 3506176 48 0 0 -9 13 0 0
+533 4 0 0 3506176 48 0 1024 -9 0 0 0
+564 4 1 0 3506176 48 0 1024 -9 3 0 0
+595 4 2 0 3506176 48 0 1024 -9 6 0 0
+627 4 3 0 3506176 48 0 1024 -9 9 0 0
+658 5 0 0 2626664 53 0 0 -9 0 0 0
+689 5 1 0 2626664 53 0 0 -9 14 0 0
+721 5 2 0 2626664 53 0 0 -9 29 0 0
+752 5 3 0 2626664 53 0 0 -9 12 0 0
+783 6 0 0 2626664 53 0 0 -9 27 0 0
+815 6 1 0 2626664 53 0 0 -9 10 0 0
+846 6 2 0 2626664 53 0 0 -9 25 0 0
+878 6 3 0 2626664 53 0 0 -9 8 0 0
+909 7 0 0 2626664 53 0 0 -9 23 0 0
+940 7 1 0 2626664 53 0 0 -9 6 0 0
+972 7 2 0 2626664 53 0 0 -9 21 0 0
+1003 7 3 0 2626664 53 0 0 -9 4 0 0
+1034 8 0 0 3506176 48 0 1024 -9 0 0 0
+1066 8 1 0 3506176 48 0 1024 -9 3 0 0
+1097 8 2 0 3506176 48 0 1024 -9 6 0 0
+1128 8 3 0 3506176 48 0 1024 -9 9 0 0
+1160 9 0 0 2626664 53 0 0 -9 0 0 0
+1191 9 1 0 2626664 53 0 0 -9 14 0 0
+1222 9 2 0 2626664 53 0 0 -9 29 0 0
+1254 9 3 0 2626664 53 0 0 -9 12 0 0
+1285 10 0 0 2626664 53 0 0 -9 27 0 0
+1317 10 1 0 2626664 53 0 0 -9 10 0 0
+1348 10 2 0 2626664 53 0 0 -9 25 0 0
+1379 10 3 0 2626664 53 0 0 -9 8 0 0
+1411 11 0 0 2626664 53 0 0 -9 23 0 0
+1442 11 1 0 2626664 53 0 0 -9 6 0 0
+1473 11 2 0 2626664 53 0 0 -9 21 0 0
+1505 11 3 0 2626664 53 0 0 -9 4 0 0
+1536 12 0 0 2626664 53 0 0 -9 18 0 0
+1567 12 1 0 2626664 53 0 0 -9 1 0 0
+1599 12 2 0 2626664 53 0 0 -9 16 0 0
+1630 12 3 0 2626664 53 0 0 -9 31 0 0
+1661 13 0 0 2626664 53 0 0 -9 14 0 0
+1693 13 1 0 2626664 53 0 0 -9 29 0 0
+1724 13 2 0 2626664 53 0 0 -9 12 0 0
+1756 13 3 0 2626664 53 0 0 -9 27 0 0
+1787 14 0 0 2626664 53 0 0 -9 10 0 0
+1818 14 1 0 2626664 53 0 0 -9 25 0 0
+1850 14 2 0 2626664 53 0 0 -9 8 0 0
+1881 14 3 0 2626664 53 0 0 -9 23 0 0
+1912 15 0 0 2626664 53 0 0 -9 5 0 0
+1944 15 1 0 2626664 53 0 0 -9 20 0 0
+1975 15 2 0 2626664 53 0 0 -9 3 0 0
+2006 15 3 0 2626664 53 0 0 -9 18 0 0
